# py_credit_plans

./: .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  auto_migrate.py  compose.yaml  pyproject.toml  upload_test_files.py
alembic/: env.py
backend/: config.py  database.py  main.py  models.py  routers.py  schemas.py
